--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,15 @@
 LUA_LIBDIR = /usr/local/lib/lua/5.1
 
 CFLAGS += -Wall -Wextra --pedantic --std=c89
-CFLAGS += `pkg-config --cflags lua5.1 dbus-1`
+CFLAGS += `pkg-config --cflags lua5.3 dbus-1`
 CFLAGS += -fPIC
-CFLAGS += -I ../vendor/compat-5.2/c-api
 
-LIBS = `pkg-config --libs dbus-1`
-
-OBJS = ldbus.o error.o pending_call.o connection.o bus.o message.o message_iter.o timeout.o watch.o ../vendor/compat-5.2/c-api/compat-5.2.o
+OBJS = ldbus.o error.o pending_call.o connection.o bus.o message.o message_iter.o timeout.o watch.o
 
 all:	ldbus.so
 
 ldbus.so: $(OBJS)
-	$(CC) -o ldbus.so -shared $(CFLAGS) $^ $(LIBS)
+	$(CC) -o ldbus.so -shared $(CFLAGS) $^ $(LDFLAGS)
 
 clean:
 	rm -f -- ldbus.so $(OBJS)
